fix: :ambulance: Disable Vercel auto deploy...

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
   "installCommand": "npm i",
   "outputDirectory": "dist",
   "public": true,
+  "git": {
+    "deploymentEnabled": {
+      "master": false
+    }
+  },
   "routes": [
     {
       "src": "/(.*)",
