--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@supabase/supabase-js": "^2.42.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nestjs-supabase-auth": "^1.0.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
