--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "deploy": "vercel --prod"
+    "deploy": "vercel --prod",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -f ./ormconfig.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
