--- a/vercel.json
+++ b/vercel.json
@@ -12,12 +12,12 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main.js"
+      "dest": "dist/src/main.js"
     }
   ],
   "builds": [
     {
-      "src": "dist/main.js",
+      "src": "dist/src/main.js",
       "use": "@vercel/node"
     }
   ],
